Initial notes on javascript, reference w3schools - update 8

--- a/JavaScript/JS-02.html
+++ b/JavaScript/JS-02.html
@@ -146,3 +146,29 @@ comments
 - adding (//) in front of a code line changes the code lines from an executable line to a comment 
 - multi-line comment block can use to prevent execution of multiple code lines 
 </pre>
+
+<pre>
+--------------------------------------------------------------------------------
+Reserved words
+--------------------------------------------------------------------------------
+# javascript reserved words
+- in javascript you cannot use these reserved words as variables, labels, or function names
+- words marked with (*) are new in ECMAScript 5 and 6 
+  > abstract      > arguments      > await*      
+  > boolean       > break          > byte
+  > case          > catch          > char      > class*      > const       > continue 
+  > debugger      > default        > delete    > do          > double     
+  > else          > enum*          > eval      > export*     > extends*
+  > false         > final          > finally   > float       > for         > function
+  > goto          
+  > if            > implements     > int       > interface
+  > let*          > long
+  > native        > new            > null
+  > package       > private        > protected > public
+  > return
+  > short         > static         > super*    > switch      > synchronized 
+  > this          > throw          > throws    > transient   > true         > try          > typeof
+  > var           > void           > volatile
+  > while         > with  
+  > yield
+</pre>
