--- a/JavaScript/JS-32.html
+++ b/JavaScript/JS-32.html
@@ -7,9 +7,97 @@
 
 <pre>
 --------------------------------------------------------------------------------
-JOSN
+object
 --------------------------------------------------------------------------------
+# object syntax 
+  like > { "name": "john", "age": 30, "car": null }
+- JSON objects are surrounded by curly braces {} 
+- JSON objects are written in key/value pairs 
+- keys must be strings, and values must be a valid JSON data-type (string, number, object, array, boolean or null)
+- keys and values are separated by a colon 
+- each (key/value) pair is separated by a comma
 
+# accessing object values 
+- you can access the object values by using dot (.) notation
+  like > myObj = { "name": "john", "age": 30, "car": null }; x = myObj.name;
+- you can also access the object values by using bracket ([]) notation 
+  like > myObj = { "name": "john", "age": 30, "car": null }; x = myObj["name"];
+  
+# looping an object 
+- you can loop through object properties by sing the for-in loop 
+  like > myObj = { "name": "john", "age": 30, "car": null };
+  for (x in myObj) document.getElementById("demo").innerHTML += x; 
+- in a for-in loop, use the bracket notation to access the property values 
+  like > myObj = { "name": "john", "age": 30, "car": null }; 
+  for (x in myObj) document.getElementById("demo").innerHTML += myObj[x];
+  
+# nested JSON objects 
+- values in a JSON object can be another JSON object 
+  like > myObj = { "name":"John", "age":30, "cars": { "car1":"Ford", "car2":"BMW", "car3":"Fiat" } }
+- you can access nested JSON objects by using the dot notation or bracket notation 
+  like > x = myObj.cars.car2; // or:
+  x = myObj.cars["car2"] ;
+  
+# modify values 
+- you can use the dot notation to modify any value in a JSON object 
+  like > myObj.cars.car2 = "mercedes"; 
+- you can also use the bracket notation to modify a value in a JSON object 
+  like > myObj.cars["car2"] = "mercedes";
+  
+# delete object properties 
+- use the (delete) keyword to delete properties from a JSON object 
+  like > delete myObj.cars.car2;
+</pre>
+
+<pre>
+--------------------------------------------------------------------------------
+arrays 
+--------------------------------------------------------------------------------
+# arrays as JSON objects 
+  like > [ "ford", "BMW", "fiat"];
+- arrays in JSON are almost the same as arrays in javascript 
+- in JSON, array values must be of type (string, number, object, array, boolean, or null) 
+- in javascript, array values can be all of the above, puts any other valid javascript expression, including 
+  (functions,m dates, and undefined)
+  
+# arrays in JSON objects 
+- arrays can be values of an object property 
+  like > { "name":"john", "age": 30, "cars":["ford", "BMW", "fiat" ] }
+  
+# accessing array values 
+- you access the array values by using the index number 
+  like > x = myObj.cars[0];
+  
+# looping through an array 
+- you can access array values by using a (for-in) loop  
+  like > for (i in myObj.cars) x += myObj.cars[i];
+- or you can use a (for) loop 
+  like > for (i=o; i<myObj.cars.length; i++) x += myObj.cars[i];
+  
+# nested arrays in JSON objects 
+- values in an array can also be another array, or even another JSON object 
+  like > myObj = { 
+  "name":"John", "age":30, 
+  "cars": [ 
+      { "name":"Ford", "models":[ "Fiesta", "Focus", "Mustang" ] },
+      { "name":"BMW", "models":[ "320", "X3", "X5" ] },
+      { "name":"Fiat", "models":[ "500", "Panda" ] }
+    ]
+  } 
+- to access arrays inside arrays, use a for-in loop for each array 
+  like > 
+  for (i in myObj.cars) {
+    x += "< h1 >" + myObj.cars[i].name + "< /h1 >";
+    for (j in myObj.cars[i].models) { x += myObj.cars[i].models[j]; }
+  }
+  
+# modify array values 
+- use the index number to modify an array 
+  like > myObj.cars[1] = "mercedes"; 
+  
+# delete array items 
+- use the (delete) keyword to delete items from an array 
+  like delete myObj.cars[1];
 </pre>
 
 
